# PicOs

./: CMakeLists.txt
src/: main.c
src/drivers/: gpio.c  gpio.h  uart.c  uart.h
src/kernel/: context_switch.S  idle.c  mutex.c  mutex.h  queue.c  queue.h  rtos.h  rtos_config.h  scheduler.c  scheduler.h  semaphore.c  semaphore.h  task.c  task.h  tick.c  tick.h
